[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/character.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PickupZone.gd" type="Script" id=3]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=10]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 2
atlas = ExtResource( 1 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpatialMaterial" id=27]
flags_transparent = true
params_diffuse_mode = 2
params_specular_mode = 1
params_cull_mode = 2
params_depth_draw_mode = 2
params_point_size = 0.1
albedo_color = Color( 1, 0.952941, 0.537255, 0 )
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.5

[sub_resource type="CubeMesh" id=23]
size = Vector3( 1, 1, 1 )

[sub_resource type="CylinderMesh" id=28]
radial_segments = 24
rings = 24

[sub_resource type="CylinderShape" id=29]

[sub_resource type="BoxShape" id=17]
extents = Vector3( 0.5, 0.5, 0.5 )

[node name="Player" type="KinematicBody"]
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1, 0 )
billboard = 1
frames = SubResource( 16 )
frame = 1
playing = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05, 0 )
visible = false
material_override = SubResource( 27 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 23 )

[node name="Sight2" type="MeshInstance" parent="."]
transform = Transform( 12, 0, 0, 0, 1, 0, 0, 0, 12, 0, 2, 0 )
visible = false
material_override = SubResource( 27 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 28 )

[node name="SightArea" type="Area" parent="."]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 1, 0 )
collision_layer = 0
collision_mask = 16

[node name="Sight" type="MeshInstance" parent="SightArea"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 1, 0 )
material_override = SubResource( 27 )
cast_shadow = 0
generate_lightmap = false
mesh = SubResource( 28 )
skeleton = NodePath("../..")

[node name="CollisionShape" type="CollisionShape" parent="SightArea"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, 0, 1, 0 )
shape = SubResource( 29 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 17 )

[node name="PickupZone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 0
collision_mask = 4096
script = ExtResource( 3 )

[node name="PickupShape" type="CollisionShape" parent="PickupZone"]
shape = SubResource( 17 )

[node name="DebugArrow" type="Sprite3D" parent="."]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 3, 1, -8 )
visible = false
billboard = 1
double_sided = false
no_depth_test = true
texture = ExtResource( 4 )

[node name="CameraAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 15, 10 )

[connection signal="money_changed" from="." to="." method="_on_Player_money_changed"]
[connection signal="area_entered" from="SightArea" to="." method="_on_SightArea_area_entered"]
[connection signal="body_entered" from="SightArea" to="." method="_on_SightArea_body_entered"]
[connection signal="body_entered" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_entered"]
[connection signal="body_exited" from="PickupZone" to="PickupZone" method="_on_PickupZone_body_exited"]
